; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-video.c_video_mmap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-video.c_video_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.cx8800_fh* }
%struct.cx8800_fh = type { i32 }
%struct.vm_area_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.vm_area_struct*)* @video_mmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @video_mmap(%struct.file* %0, %struct.vm_area_struct* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca %struct.vm_area_struct*, align 8
  %5 = alloca %struct.cx8800_fh*, align 8
  store %struct.file* %0, %struct.file** %3, align 8
  store %struct.vm_area_struct* %1, %struct.vm_area_struct** %4, align 8
  %6 = load %struct.file*, %struct.file** %3, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.cx8800_fh*, %struct.cx8800_fh** %7, align 8
  store %struct.cx8800_fh* %8, %struct.cx8800_fh** %5, align 8
  %9 = load %struct.cx8800_fh*, %struct.cx8800_fh** %5, align 8
  %10 = call i32 @get_queue(%struct.cx8800_fh* %9)
  %11 = load %struct.vm_area_struct*, %struct.vm_area_struct** %4, align 8
  %12 = call i32 @videobuf_mmap_mapper(i32 %10, %struct.vm_area_struct* %11)
  ret i32 %12
}

declare dso_local i32 @videobuf_mmap_mapper(i32, %struct.vm_area_struct*) #1

declare dso_local i32 @get_queue(%struct.cx8800_fh*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
